# vpmobil-py

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
documentation/: README.md  SUMMARY.md  vpday.md
documentation/anderes/: credits.md
documentation/classes/: stundenplan.md
documentation/classes/stundenplan/: .fetch.md
documentation/classes/vpday/: .getxml.md  .klasse.md
documentation/get-started/: get-the-data-of-a-stundenplan24.de-substitution-plan.md
documentation/getting-started/: vertretungsplandaten-abrufen.md
documentation/klassen_und_funktionen/: kurs.md  stunde.md
documentation/klassen_und_funktionen/klasse/: .allestunden.md  .stunde.md  .stundeninperiode.md  README.md
documentation/klassen_und_funktionen/vertretungsplan/: .fetch.md  README.md
test-programm/: app.py  autonom testing.py
tests/: app.py  autonom testing.py  basic_example.py  https tests.py  joTests.py  test.py  tooltips.py  unitest.py
tests/mobdaten/: 2024-08-05.xml  2024-08-06.xml  2024-08-07.xml  2024-08-08.xml  2024-08-09.xml  2024-08-12.xml  2024-08-13.xml
tests/vpmobil-webapp/: index.css  index.html
vp-mobil/console/: __init__.py  inputs.py  logging.py
vp-mobil/math/: __init__.py  binom.py  numbers.py
vp_mobil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vpmobil/: Exceptions.py  Vertretungsplan.py  Vertretungsplans.py  VpDay.py  __init__.py  errors.py  exceptions.py  fetcher.py  io.py  lib.py  parser.py  stundenplan.py  testing.py  vertretungsplan.py  vpDay.py  workflow.py
vpmobil-webapp/: index.html  index.js
(+6 files in other folders)
